--- a/gostock-fe/package.json
+++ b/gostock-fe/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.131.27",
+    "@tanstack/router": "0.0.1-beta.53",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
