--- a/gostock-fe/package.json
+++ b/gostock-fe/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/router": "0.0.1-beta.53",
     "react": "^19.1.0",
