--- a/gostock-fe/package.json
+++ b/gostock-fe/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.1",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/router": "0.0.1-beta.53",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
