--- a/gostock-fe/package.json
+++ b/gostock-fe/package.json
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.3.1",
+    "@mui/lab": "7.0.0-beta.17",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.11.3",
     "@tanstack/react-router": "^1.131.27",
     "@tanstack/router": "0.0.1-beta.53",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
