--- a/gostock-fe/package.json
+++ b/gostock-fe/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
